--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.563.0",
-    "next": "15.1.6",
+    "next": "^15.1.0",
     "next-auth": "^4.24.13",
     "radix-ui": "^1.4.3",
-    "react": "19.0.0",
+    "react": "^19.0.0",
     "react-day-picker": "^9.13.2",
-    "react-dom": "19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.71.1",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
@@ -33,10 +33,10 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "^15.1.0",
     "prisma": "^5.19.1",
     "shadcn": "^3.8.4",
     "tailwindcss": "^4",
